# aoc2021

./: README.md
D1/: D1.cabal  README.md  stack.yaml
D1/src/: Main.hs
D2/src/: Main.hs
