name:                D1
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/D1#readme
license:             BSD3
license-file:        LICENSE
author:              Zenobio
maintainer:          example@example.com
copyright:           2021 Zenobio
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable AOC2021-D1
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
